--- a/.gitignore
+++ b/.gitignore
@@ -123,10 +123,13 @@ celerybeat.pid
 .env
 .venv
 env/
-venv/
+venv*/
 ENV/
 env.bak/
 venv.bak/
+
+# chainlit
+.chainlit/
 
 # Spyder project settings
 .spyderproject
